--- a/repset.yaml
+++ b/repset.yaml
@@ -9,7 +9,7 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      tier:
+      tier: frontend
   template:
     metadata:
       matchLabels:
