--- a/repset.yaml
+++ b/repset.yaml
@@ -12,7 +12,7 @@ spec:
       tier: frontend
   template:
     metadata:
-      matchLabels:
+      labels:
        tier: frontend
    spec:
     containers:
